# unified_joint_trajectory_controller

./: CMakeLists.txt  README.md  goal.txt  package.xml  setup.py
action/: JointsToPosition.action
config/: pr2_joints.yaml
launch/: pr2_fake_servers.launch  pr2_fake_servers_follow_joint.launch  pr2_unified_interface.launch
msg/: JointsToPosition.msg
scripts/: fake_joint_traj_cnt.py  unified_interface.py
src/unified_joint_trajectory_controller/: pr2_joint_trajectory_controller_manager.py
