<?xml version="1.0"?>
<package>
  <name>unified_joint_trajectory_controller</name>
  <version>0.0.0</version>
  <description>The unified_joint_trajectory_controller package provides
    a unified and easy to use interface to move joints. And some extra tools.</description>

  <author email="Sammy.Pfeiffer@student.uts.edu.au">Sam Pfeiffer</author>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>